reviews-count no longer pushed off-screen

--- a/kw_webapp/static/css/styles.css
+++ b/kw_webapp/static/css/styles.css
@@ -6,6 +6,6 @@
 #reviews-left {
   float: right;
   margin-right: 10px;
-  width: 75px;
+  width: 90px;
   text-align: right;
 }
